compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__assert-2.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "fn go(x) { assert #(1, 2) = x }"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  if (x[0] !== 1 || x[1] !== 2) {
    throw makeError(
      "assignment_no_match",
      "my/mod",
      1,
      "go",
      "Assignment pattern did not match",
      { value: x }
    )
  }
  return x;
}

