compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__assert_that_always_fails.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
assertion_line: 287
expression: "\ntype Wibble {\n    Wibble(Int)\n    Wobble(Int)\n}\n\nfn go() {\n  let assert Wobble(n) = Wibble(1)\n  n\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
    Wibble(Int)
    Wobble(Int)
}

fn go() {
  let assert Wobble(n) = Wibble(1)
  n
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType, makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

class Wibble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}

class Wobble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}

function go() {
  let $ = new Wibble(1);
  throw makeError(
    "let_assert",
    FILEPATH,
    "my/mod",
    8,
    "go",
    "Pattern match failed, no pattern matched the value.",
    { value: $, start: 62, end: 72, pattern_start: 73, pattern_end: 82 }
  )
  
}
