compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__message.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "\npub fn unwrap_or_panic(value) {\n  let assert Ok(inner) = value as \"Oops, there was an error\"\n  inner\n}\n"
---
----- SOURCE CODE

pub fn unwrap_or_panic(value) {
  let assert Ok(inner) = value as "Oops, there was an error"
  inner
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

export function unwrap_or_panic(value) {
  if (!value.isOk()) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "unwrap_or_panic",
      "Oops, there was an error",
      { value: value }
    )
  }
  let inner = value[0];
  return inner;
}
