compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__module_const_var1.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "\npub const int = 42\npub const int_alias = int\npub const compound: #(Int, Int) = #(int, int_alias)\n"
---
----- SOURCE CODE

pub const int = 42
pub const int_alias = int
pub const compound: #(Int, Int) = #(int, int_alias)


----- TYPESCRIPT DEFINITIONS
export const int: number;

export const int_alias: number;

export const compound: [number, number];
